syntax = "proto3";

package protos;
import "google/protobuf/any.proto";
import "common.proto";
message PermissionInfo {
  string ID = 1;
  string Label = 2;
  string GroupID = 3;
  string UserID = 4;
  string OpaRego = 5;
  string CreatedAt = 6;
  string UpdatedAt = 7;
}

message PermissionID {
  string ID = 1;
}

message PermissionGroupInput {
  string PermissionID = 1;
  string GroupID = 2 ;
}

message PermissionJoinUser {
  string ID = 1;
  string Label = 2;
  string GroupID = 3;
  string UserID = 4;
  string OpaRego = 5;
  string CreatedAt = 6;
  string UpdatedAt = 7;
  string DisplayName = 8;
  string Description = 9;
  string Extra = 10;
}

message UpdatePermissionByGroupInput {
  string PermissionID = 1;
  string GroupID = 2;
  map<string,google.protobuf.Any> Data = 3;
}

message PermissionJoinUsers {
  repeated PermissionJoinUser Data = 1; 
}

message ListPermissionByGroupInput {
  string GroupID = 1;
  LimitOffset Data = 2;
}

message ListPermissionJoinOuput {
  int64 count = 1;
  repeated PermissionJoinUser Data = 2;
}